Se cambio la imagen del Hero Section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
     --white: #FFFFFF;
 }
 
+:root {
+   scroll-behavior: smooth; 
+}
+
 /* General Styles */
 body {
     font-family: 'Poppins', sans-serif;
